--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "md5": "^2.3.0",
     "mongoose": "^7.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/md5": "^2.3.2",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.15.10",
     "concurrently": "^7.6.0",
