--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "md5": "^2.3.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "nanoid": "3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/md5": "^2.3.2",
     "@types/mongoose": "^5.11.97",
+    "@types/nanoid": "^3.0.0",
     "@types/node": "^18.15.10",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.22",
